# fp-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: compare.rs
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
memory-bank/archive/: project_history_pre_aug_2025.md
memory-bank/thematic/comparative_analysis/: rust_purescript_reader_comparison.md
scripts/: pre-commit.sh
src/: applicative.rs  apply.rs  experimental_apply.rs  function.rs  functor.rs  identity.rs  lib.rs  monad.rs  profunctor.rs  utils.rs
src/kind_based/: kind.rs  mod.rs
src/legacy/: applicative.rs  apply.rs  functor.rs  identity.rs  mod.rs  monad.rs
src/legacy/transformers/: mod.rs  reader.rs
src/transformers/: mod.rs  reader.rs
tests/: applicative.rs  apply.rs  functor.rs  hkt_integration.rs  identity.rs  legacy_integration.rs  monad.rs  profunctor.rs
tests/hkt/: applicative.rs  functor.rs  identity.rs  kind.rs  mod.rs  monad.rs
tests/hkt/transformers/: mod.rs  reader.rs
tests/kind/: applicative.rs  functor.rs  identity.rs  kind.rs  monad.rs
tests/kind/transformers/: mod.rs  reader.rs
tests/legacy/: applicative.rs  apply.rs  functor.rs  identity.rs  monad.rs
tests/legacy/transformers/: mod.rs  reader_test.rs
tests/transformers/: reader_test.rs
