[package]
name = "fp-rs"
description = "A library for functional programming abstractions in Rust, focusing on Monads, Functors, Applicatives, and related concepts."
version = "0.1.0"
authors = ["Your Name <you@example.com>"] # TODO: Update with actual author information
edition = "2021"
rust-version = "1.66" # Minimum supported Rust version
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/your-username/fp-rs" # TODO: Update with actual repository URL
homepage = "https://github.com/your-username/fp-rs" # TODO: Update with actual homepage URL
documentation = "https://docs.rs/fp-rs" # Will be live after publishing to crates.io
keywords = ["functional", "fp", "monad", "functor", "applicative", "profunctor", "rust-patterns"]
categories = ["rust-patterns", "algorithms"] # Removed "no-std" as std is currently used

[dependencies]

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }

[[bench]]
name = "compare"
harness = false

[features]
default = []
kind = []
