[package]
name = "monadify"
description = "A library for functional programming abstractions in Rust, focusing on Monads, Functors, Applicatives, and related concepts."
version = "0.1.0"
authors = ["jarnura"]
edition = "2021"
rust-version = "1.66" # Minimum supported Rust version
license = "MIT"
readme = "README.md"
repository = "https://github.com/jarnura/monadify"
homepage = "https://github.com/jarnura/monadify"
documentation = "https://docs.rs/monadify" # Will be live after publishing to crates.io
keywords = ["functional", "fp", "monad"]
categories = ["rust-patterns"] # Removed "no-std" as std is currently used

[dependencies]

[dev-dependencies]
criterion = { version = "0.4.0", features = ["html_reports"] }

[[bench]]
name = "compare"
harness = false

[features]
default = [] # HKT is now the default, no feature needed to enable it.
legacy = []  # Optional feature to include legacy implementations.
